Fixes overflow on book cards with long names

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body {
     display: grid;
     gap: 40px;
     margin: 20px;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr
 }
 
 /* Book-Cards */
@@ -177,8 +177,15 @@ button:hover,.btn:hover {
     grid-template-columns: 100px auto;
     justify-items: start;
     align-items: baseline;
+    
 }
 
+p.title, p.author{
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
+}
 .book-card h3 {
     padding: 5px;
 }
